fixed gaps

--- a/styles.css
+++ b/styles.css
@@ -208,8 +208,8 @@ button {
 @media screen and (min-width: 769px) {
   #histories {
     display: grid;
-    flex-direction: column;
     grid-template-columns: repeat(2, 1fr);
+    grid-gap: 15px;
     margin-bottom: 10px;
   }
 
